--- a/Creditz-spring-boot/src/main/resources/application.properties
+++ b/Creditz-spring-boot/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=9999
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:3306/rms?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/rms2?useSSL=false
 
 # Username and password
 spring.datasource.username = root
