--- a/Creditz-spring-boot/src/main/resources/application.properties
+++ b/Creditz-spring-boot/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.file=errorlog.txt
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:3306/rms2?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/rms?useSSL=false
 
 # Username and password
 spring.datasource.username = root
@@ -42,3 +42,25 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.open-in-view=false
+
+
+
+#regarding email
+
+
+#Make sure less secure App is enabled at link
+#https://myaccount.google.com/lesssecureapps
+
+spring.mail.host = smtp.gmail.com
+spring.mail.port=25
+#sender's email & password
+spring.mail.username=pjaiswal1000@gmail.com
+spring.mail.password=momdad12
+
+#Below Properties are needed for maintaining the session.
+#Two Step verification should not be enabled for gmail.
+
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
